# OTex

./: CMakeLists.txt  InitialOT.cpp  InitialOT.h  IntialOT.cpp  IntialOT.h  OTExtension.cpp  OTExtension.h  elgamal.cpp  elgamal.h  main.cpp  readme.md  util.cpp  util.h
